# ITDiscover

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
conda-recipe/: meta.yaml
src/itdiscover/: __init__.py  alignment.py  calls.py  cli.py  coverage.py  fastq.py  insertions.py  itds.py  pipeline.py  reads.py  sequences.py
tests/: __init__.py  test_alignment.py  test_calls.py  test_cli.py  test_coverage.py  test_fastq.py  test_insertions.py  test_itds.py  test_pipeline.py  test_reads.py  test_sequences.py
tools/: set_version.py
